* Overhaul of image crop sizes; **make sure to run [Regenerate Thumbnails](https://wordpress.org/plugins/regenerate-thumbnails/) plugin!**
* New demo content import system merged into WordPress's system at *Tools > Import* to get a full working copy of the demo with settings, widgets, and all.
* Updated to Bootstrap 3.3.
* Updated to FontAwesome 4.2.

--------------------------------------------------------------

1.2.4
-----

* Updated Theme Blvd framework to 2.4.4
* Fixed Gallery Slider only allowing five images.
* Fixed Gallery Slider only allowing one instance on a page.
* Added deep linking in Tabs element by filtering `themeblvd_tabs_deep_linking` to true.

--------------------------------------------------------------

1.2.3
-----

* Updated Theme Blvd framework to 2.4.3
* Minor styling fixes for upcoming WP 3.9.
* Minor improvements to Mini Post Grids.
* Fixed some non working options with recently added `[gallery_slider]`.
* Fixed error when installing theme recommended plugins in bulk under *Appearance > Theme Plugins*.
* Improved how menu item icons are handled on frontend.

--------------------------------------------------------------

1.2.2
-----

* Updated Theme Blvd framework to 2.4.2
* Added additional HTML5 inputs to general form styling.
* Improved sidebar layouts in IE8.
* Fixed inconsistencies with internal grid system.
* Added support for thumbnail navigation with Boostrap Carousel slider (requires Theme Blvd Sliders v1.2.1+).
* Added support for Jumbotron, can be used with Theme Blvd Shortcodes 1.3+, Theme Blvd Layout Builder 1.2.3+.
* Added support for Gallery slider, can be used with Theme Blvd Shortcodes 1.3+.
* Updated TGM Plugin Activation to 2.4.0.
* Fixed some recent, compatibility issues with WPML.

--------------------------------------------------------------

1.2.1
-----

* Updated Theme Blvd framework to 2.4.1
* Minor fixes to themeblvd-dark.css
* Minor fixes to admin option styles