@@ -1,0 +1,172 @@
+/* Typography */
+body {
+	color: #666666;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 1.6;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: #333333;
+	font-weight: bold;
+	line-height: 1.1;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+h1 {
+	font-size: 32px;
+}
+h2 {
+	font-size: 27px;
+}
+h3 {
+	font-size: 20px;
+}
+h4 {
+	font-size: 15px;
+}
+h5 {
+	font-size: 13px;
+}
+h6 {
+	font-size: 11px;
+}
+a {
+	color: #428bca;
+	text-decoration: none;
+}
+
+/* Thumbnails */
+.thumbnail,
+.pretty,
+.wp-caption {/* Match framework's thumb classes to bootstrap's .thumbnail */
+	padding: 4px;
+	line-height: 1.428571429;
+	background-color: #ffffff;
+	border: 1px solid #dddddd;
+	border-radius: 0;
+	/* border-radius: 4px; */
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	display: inline-block;
+	max-width: 100%;
+	height: auto;
+	display: block;
+	margin-bottom: 20px;
+}
+a.pretty:hover,
+a.pretty:focus,
+a.pretty:active,
+a.thumbnail:hover,
+a.thumbnail:focus,
+a.thumbnail:active {
+	border-color: #bbbbbb;
+	-webkit-box-shadow: 0 1px 4px #cccccc;
+	-moz-box-shadow: 0 1px 4px #cccccc;
+	box-shadow: 0 1px 4px #cccccc;
+}
+
+/* WP Classes */
+.gallery-item {
+	float: left;
+	margin: 0;
+	text-align: center;
+}
+.gallery-columns-1 .gallery-item {width: 100%;}
+.gallery-columns-2 .gallery-item {width: 50%;}
+.gallery-columns-3 .gallery-item {width: 33%;}
+.gallery-columns-4 .gallery-item {width: 25%;}
+.gallery-columns-5 .gallery-item {width: 20%;}
+.gallery-columns-6 .gallery-item {width: 16%;}
+.gallery-columns-7 .gallery-item {width: 14%;}
+.gallery-columns-8 .gallery-item {width: 12%;}
+.gallery-columns-9 .gallery-item {width: 11%;}
+.gallery-columns-10 .gallery-item {width: 10%;}
+.gallery-columns-11 .gallery-item {width: 9%;}
+.gallery-columns-12 .gallery-item {width: 8%;}
+.gallery-item .gallery-icon {
+	padding: 10px;
+}
+.gallery-item img {
+	display: inline-block;
+}
+.gallery-item .wp-caption-text {
+	font-size: 11px;
+	line-height: 1.4;
+	margin: 0;
+}
+.alignnone {
+	margin: 5px 0;
+}
+.aligncenter, div.aligncenter {
+	display: block;
+	margin: 5px auto 5px auto;
+}
+.aligncenter {
+	display: block;
+	margin: 5px auto 5px auto;
+}
+.alignright {
+	float: right;
+	margin: 5px 0 20px 20px;
+}
+.alignleft {
+	float: left;
+	margin: 5px 20px 20px 0;
+}
+a img.aligncenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+a img.alignnone {
+	margin: 5px 0 20px 0;
+}
+a img.alignright {
+	float: right;
+	margin: 5px 0 20px 20px;
+}
+a img.alignleft {
+	float: left;
+	margin: 5px 20px 20px 0;
+}
+.wp-caption {
+	max-width: 96%; /* Image does not overflow the content area */
+	padding: 4px;
+	text-align: center;
+}
+.wp-caption.alignnone {
+	margin: 5px 0 20px 0;
+}
+.wp-caption.alignleft {
+	margin: 5px 20px 20px 0;
+}
+.wp-caption.alignright {
+	margin: 5px 0 20px 20px;
+}
+.wp-caption img {
+	border: 0 none;
+	height: auto;
+	margin:0;
+	max-width: 98.5%;
+	padding:0;
+	width: auto;
+}
+p.wp-caption-text {
+	font-size: 11px;
+	line-height: 1.4;
+	text-align: center;
+}
+.wp-caption p.wp-caption-text {
+	padding: 10px 5px;
+	margin: 0;
+}
+.has-caption {
+	display: inline-block;
+	margin-bottom: 8px;
+}
